--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@ htmlcov
 parts
 src/*.egg-info
 var
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# JetBrains PyCharm
+/.idea/
